fixed table alignment

--- a/src/CSS/listMakingPage.css
+++ b/src/CSS/listMakingPage.css
@@ -25,12 +25,13 @@
 
 .listTable {
   background-color: rgba(255, 255, 255, 0.5);
-  width: 100%;
-
-  /* position: absolute; */
-  /* align-content: center;
-  table-layout: "fixed";
-  width: "100px";
+  margin-left: -35px;
+  /* width: 100%; */
+  /* left: -100px; */
+  /* position: center;
+  /* align-content: center; */
+  /* table-layout: "fixed"; */
+  /* width: "100px";
   max-width: "100%";
   padding: "10px"; */
 }
